--- a/src/Views/Widgets/Stashes.xaml
+++ b/src/Views/Widgets/Stashes.xaml
@@ -37,6 +37,7 @@
                         Margin="4,0,0,0"
                         Text="{DynamicResource Text.Stashes.Stashes}" 
                         Foreground="{DynamicResource Brush.FG2}" 
+                        FontFamily="Microsoft YaHei UI"
                         FontWeight="Bold"/>
 
                     <controls:Loading
@@ -88,6 +89,7 @@
                         Margin="4,0,0,0"
                         Text="{DynamicResource Text.Stashes.Changes}" 
                         Foreground="{DynamicResource Brush.FG2}" 
+                        FontFamily="Microsoft YaHei UI"
                         FontWeight="Bold"/>
                 </StackPanel>
             </Border>
