--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -360,26 +360,25 @@
 
     <sys:String x:Key="Text.Preference">偏好设置</sys:String>
     <sys:String x:Key="Text.Preference.General">通用配置</sys:String>
-    <sys:String x:Key="Text.Preference.Locale">显示语言 ：</sys:String>
-    <sys:String x:Key="Text.Preference.AvatarServer">头像服务 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Locale">显示语言</sys:String>
+    <sys:String x:Key="Text.Preference.AvatarServer">头像服务</sys:String>
     <sys:String x:Key="Text.Preference.CheckUpdate">启用检测更新</sys:String>
     <sys:String x:Key="Text.Preference.AutoFetch">启用定时自动拉取远程更新（重启生效）</sys:String>
     <sys:String x:Key="Text.Preference.RestoreTabs">启动时恢复上次打开的仓库</sys:String>
     <sys:String x:Key="Text.Preference.Git">GIT配置</sys:String>
-    <sys:String x:Key="Text.Preference.Git.Path">安装路径 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Git.Path">安装路径</sys:String>
     <sys:String x:Key="Text.Preference.Git.Path.Placeholder">填写git.exe所在位置</sys:String>
-    <sys:String x:Key="Text.Preference.Git.Dir">默认克隆路径 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Git.Dir">默认克隆路径</sys:String>
     <sys:String x:Key="Text.Preference.Git.Dir.Placeholder">默认的仓库本地存放位置</sys:String>
-    <sys:String x:Key="Text.Preference.Git.User">用户名 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Git.User">用户名</sys:String>
     <sys:String x:Key="Text.Preference.Git.User.Placeholder">默认GIT用户名</sys:String>
-    <sys:String x:Key="Text.Preference.Git.Email">邮箱 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Git.Email">邮箱</sys:String>
     <sys:String x:Key="Text.Preference.Git.Email.Placeholder">默认GIT用户邮箱</sys:String>
-    <sys:String x:Key="Text.Preference.Git.CRLF">自动换行转换 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Git.CRLF">自动换行转换</sys:String>
     <sys:String x:Key="Text.Preference.Merger">外部合并工具</sys:String>
-    <sys:String x:Key="Text.Preference.Merger.Type">工具 ：</sys:String>
-    <sys:String x:Key="Text.Preference.Merger.Path">安装路径 ：</sys:String>
+    <sys:String x:Key="Text.Preference.Merger.Type">工具</sys:String>
+    <sys:String x:Key="Text.Preference.Merger.Path">安装路径</sys:String>
     <sys:String x:Key="Text.Preference.Merger.Path.Placeholder">填写工具可执行文件所在位置</sys:String>
-    <sys:String x:Key="Text.Preference.Merger.Cmd">命令行参数 ：</sys:String>
     <sys:String x:Key="Text.Preference.Dialog.GitExe">选择git.exe所在位置</sys:String>
     <sys:String x:Key="Text.Preference.Dialog.Merger">选择{0}所在位置</sys:String>
 
