--- a/src/Views/Preference.xaml
+++ b/src/Views/Preference.xaml
@@ -232,7 +232,7 @@
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Height="20">
                             <TextBlock Text="{Binding Display}" Margin="2,0"/>
-                            <TextBlock Text="{Binding Desc}" Margin="8,0,0,0" FontSize="10" Foreground="{DynamicResource Brush.FG2}"/>
+                            <TextBlock Text="{Binding Desc}" Margin="8,0,0,0" FontFamily="Microsoft YaHei UI" FontSize="11" Foreground="{DynamicResource Brush.FG2}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
