--- a/src/Views/Popups/Reset.xaml
+++ b/src/Views/Popups/Reset.xaml
@@ -43,7 +43,10 @@
             Orientation="Horizontal"
             VerticalAlignment="Center">
             <Path Width="14" Height="14" Data="{StaticResource Icon.Commit}"/>
-            <TextBlock x:Name="txtMoveTo" Margin="8,0,0,0"/>
+            <Border Background="{DynamicResource Brush.Badge}" Margin="4,0,0,0" Padding="4,2" CornerRadius="4">
+                <TextBlock x:Name="txtSHA"/>
+            </Border>
+            <TextBlock x:Name="txtMoveTo" Margin="4,0,0,0"/>
         </StackPanel>
 
         <TextBlock
