--- a/src/Views/Popups/Reword.xaml
+++ b/src/Views/Popups/Reword.xaml
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -30,7 +30,10 @@
             Orientation="Horizontal"
             VerticalAlignment="Center">
             <Path Width="14" Height="14" Data="{StaticResource Icon.Commit}"/>
-            <TextBlock x:Name="txtCurrent" Margin="8,0,0,0"/>
+            <Border Background="{DynamicResource Brush.Badge}" Margin="4,0,0,0" Padding="4,2" CornerRadius="4">
+                <TextBlock x:Name="txtSHA"/>
+            </Border>
+            <TextBlock x:Name="txtCurrent" Margin="4,0,0,0"/>
         </StackPanel>
 
         <TextBlock
