--- a/src/Views/Popups/Squash.xaml
+++ b/src/Views/Popups/Squash.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -31,7 +31,10 @@
             Orientation="Horizontal"
             VerticalAlignment="Center">
             <Path Width="14" Height="14" Data="{StaticResource Icon.Commit}"/>
-            <TextBlock x:Name="txtHead" Margin="8,0,0,0"/>
+            <Border Background="{DynamicResource Brush.Badge}" Margin="4,0,0,0" Padding="4,2" CornerRadius="4">
+                <TextBlock x:Name="txtHeadSHA"/>
+            </Border>
+            <TextBlock x:Name="txtHead" Margin="4,0,0,0"/>
         </StackPanel>
 
         <TextBlock
@@ -44,7 +47,10 @@
             Orientation="Horizontal"
             VerticalAlignment="Center">
             <Path Width="14" Height="14" Data="{StaticResource Icon.Commit}"/>
-            <TextBlock x:Name="txtParent" Margin="8,0,0,0"/>
+            <Border Background="{DynamicResource Brush.Badge}" Margin="4,0,0,0" Padding="4,2" CornerRadius="4">
+                <TextBlock x:Name="txtParentSHA"/>
+            </Border>
+            <TextBlock x:Name="txtParent" Margin="4,0,0,0"/>
         </StackPanel>
 
         <TextBlock
