style<Exceptions>: use Microsoft YaHei UI in Exceptions

--- a/src/Views/Widgets/Exceptions.xaml
+++ b/src/Views/Widgets/Exceptions.xaml
@@ -25,7 +25,11 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Grid.Row="0" Text="{DynamicResource Text.Launcher.Error}" FontWeight="Bold"/>
+                            <TextBlock 
+                                Grid.Row="0" 
+                                Text="{DynamicResource Text.Launcher.Error}" 
+                                FontFamily="Microsoft YaHei UI" 
+                                FontWeight="Bold"/>
                             <controls:TextEdit
                                 Grid.Row="1"
                                 Text="{Binding Path=., Mode=OneWay}"
@@ -35,12 +39,14 @@
                                 VerticalScrollBarVisibility="Auto"
                                 MaxHeight="80"
                                 Margin="0,8"
+                                FontFamily="Microsoft YaHei UI"
                                 VerticalAlignment="Top"/>
                             <Button 
                                 Grid.Row="2" 
                                 Height="25"
                                 Margin="4,0" Padding="8,0" 
-                                Click="Dismiss" 
+                                Click="Dismiss"
+                                FontFamily="Microsoft YaHei UI"
                                 Content="{DynamicResource Text.Close}"
                                 Background="{DynamicResource Brush.Accent1}"
                                 BorderBrush="{DynamicResource Brush.FG1}"
