--- a/src/Views/Popups/Reset.xaml
+++ b/src/Views/Popups/Reset.xaml
@@ -72,7 +72,7 @@
 
                         <Path Grid.Column="0" Width="12" Height="12" Fill="{Binding Color}" Data="M 0,0 A 180,180 180 1 1 1,1 Z"/>
                         <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="4,0,0,0"/>
-                        <TextBlock Grid.Column="2" Text="{Binding Desc}" FontFamily="Microsoft YaHei UI" FontSize="11" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Right"/>
+                        <TextBlock Grid.Column="2" Text="{Binding Desc}" FontSize="11" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Right"/>
                     </Grid>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
