--- a/src/Resources/Styles/ContextMenu.xaml
+++ b/src/Resources/Styles/ContextMenu.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:models="clr-namespace:SourceGit.Models">
 
     <Style TargetType="{x:Type MenuItem}">
         <Setter Property="Background" Value="Transparent"/>
@@ -7,7 +8,7 @@
         <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="MinHeight" Value="24"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-        <Setter Property="TextElement.FontFamily" Value="Microsoft YaHei UI"/>
+        <Setter Property="FontFamily" Value="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyWindow, Mode=OneWay}" />
         <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
         <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
