--- a/src/Resources/Styles/Tree.xaml
+++ b/src/Resources/Styles/Tree.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:SourceGit.Views.Controls">
+                    xmlns:controls="clr-namespace:SourceGit.Views.Controls"
+                    xmlns:models="clr-namespace:SourceGit.Models">
 
     <Style x:Key="Style.TreeView.ToggleButton" TargetType="{x:Type ToggleButton}">
         <Setter Property="Focusable" Value="False"/>
@@ -58,8 +59,7 @@
                                     VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
                                     HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                     SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
-                                    ContentSource="Header"
-                                    TextElement.FontFamily="Consolas,Microsoft YaHei UI"/>
+                                    ContentSource="Header"/>
                             </Grid>
                         </Border>
                         <ItemsPresenter x:Name="ItemsHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
@@ -97,6 +97,7 @@
         <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Standard" />
         <Setter Property="ScrollViewer.CanContentScroll" Value="True" />
         <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="TextElement.FontFamily" Value="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}"/>
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
