--- a/src/Views/Widgets/CommitDetail.xaml
+++ b/src/Views/Widgets/CommitDetail.xaml
@@ -7,7 +7,8 @@
              xmlns:models="clr-namespace:SourceGit.Models"
              xmlns:widgets="clr-namespace:SourceGit.Views.Widgets"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">    
+             d:DesignHeight="450" d:DesignWidth="800"
+             FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}">
     <TabControl x:Name="body">
         <TabItem Header="{DynamicResource Text.CommitViewer.Info}">            
             <Grid>
