--- a/src/Views/Widgets/DiffViewer.xaml
+++ b/src/Views/Widgets/DiffViewer.xaml
@@ -7,7 +7,8 @@
              xmlns:models="clr-namespace:SourceGit.Models"
              mc:Ignorable="d"
              Background="{DynamicResource Brush.Window}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             FontFamily="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyContent, Mode=OneWay}">
     <UserControl.Resources>
         <Style x:Key="Style.DataGridRow.DiffViewer" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource Style.DataGridRow}">
             <EventSetter Event="RequestBringIntoView" Handler="OnTextDiffBringIntoView"/>
