--- a/src/Resources/Styles/TabControl.xaml
+++ b/src/Resources/Styles/TabControl.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:models="clr-namespace:SourceGit.Models">
     <Style TargetType="{x:Type TabControl}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
@@ -51,6 +52,7 @@
                                     <Setter Property="FontWeight" Value="DemiBold"/>
                                     <Setter Property="FontSize" Value="9pt"/>
                                     <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
+                                    <Setter Property="TextElement.FontFamily" Value="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyWindow, Mode=OneWay}"/>
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabItem}}, Path=IsSelected}" Value="True">
                                             <Setter Property="Foreground" Value="{DynamicResource Brush.Accent1}"/>
