--- a/src/Resources/Styles/TextBlock.xaml
+++ b/src/Resources/Styles/TextBlock.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:SourceGit.Views.Controls">
+                    xmlns:controls="clr-namespace:SourceGit.Views.Controls"
+                    xmlns:models="clr-namespace:SourceGit.Models">
     <Style x:Key="Style.TextBlock.Base" TargetType="{x:Type TextBlock}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="FontSize" Value="9pt"/>
@@ -18,6 +19,7 @@
     <Style x:Key="Style.TextBlock.Group" TargetType="{x:Type TextBlock}" BasedOn="{x:Null}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="FontFamily" Value="{Binding Source={x:Static models:Preference.Instance}, Path=General.FontFamilyWindow, Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource Brush.FG2}"/>
         <Setter Property="FontWeight" Value="ExtraBold"/>
         <Setter Property="FontSize" Value="9pt"/>
