fix<HighlightableTextBlock>: fix multi-line selection lag in DiffViewer

--- a/src/Resources/Styles/TextBlock.xaml
+++ b/src/Resources/Styles/TextBlock.xaml
@@ -48,5 +48,6 @@
         <Setter Property="LineHeight" Value="16"/>
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="4,0,0,0"/>
+        <Setter Property="IsHitTestVisible" Value="False"/>
     </Style>
 </ResourceDictionary>
