style<PageTabBar>: change label style

--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -287,9 +287,9 @@
     <sys:String x:Key="Text.Launcher.About">关于</sys:String>
     <sys:String x:Key="Text.Launcher.Error">出错了</sys:String>
 
-    <sys:String x:Key="Text.PageSwitcher.New">新建空白页</sys:String>
-    <sys:String x:Key="Text.PageSwitcher.Welcome.Title">新标签页</sys:String>
-    <sys:String x:Key="Text.PageSwitcher.Welcome.Tip">起始页</sys:String>
+    <sys:String x:Key="Text.PageTabBar.New">新建空白页</sys:String>
+    <sys:String x:Key="Text.PageTabBar.Welcome.Title">新标签页</sys:String>
+    <sys:String x:Key="Text.PageTabBar.Welcome.Tip">起始页</sys:String>
 
     <sys:String x:Key="Text.Merge">合并分支</sys:String>
     <sys:String x:Key="Text.Merge.Source">合并分支 ：</sys:String>
