--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -288,9 +288,9 @@
     <sys:String x:Key="Text.Launcher.About">ABOUT</sys:String>
     <sys:String x:Key="Text.Launcher.Error">ERROR</sys:String>
 
-    <sys:String x:Key="Text.PageSwitcher.New">NEW PAGE</sys:String>
-    <sys:String x:Key="Text.PageSwitcher.Welcome.Title">New Page</sys:String>
-    <sys:String x:Key="Text.PageSwitcher.Welcome.Tip">Welcome Page</sys:String>
+    <sys:String x:Key="Text.PageTabBar.New">NEW PAGE</sys:String>
+    <sys:String x:Key="Text.PageTabBar.Welcome.Title">*Repositories</sys:String>
+    <sys:String x:Key="Text.PageTabBar.Welcome.Tip">WELCOME PAGE</sys:String>
 
     <sys:String x:Key="Text.Merge">Merge Branch</sys:String>
     <sys:String x:Key="Text.Merge.Source">Source Branch :</sys:String>
